--- a/paper/references.bib
+++ b/paper/references.bib
@@ -149,20 +149,20 @@
   timestamp = {2018.06.17}
 }
 
-@ARTICLE{LISA17,
-  author = {{Amaro-Seoane}, P. and et al.},
-  title = {{Laser Interferometer Space Antenna}},
-  journal = {ArXiv e-prints},
-  year = {2017},
-  month = feb,
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
-  adsurl = {http://adsabs.harvard.edu/abs/2017arXiv170200786A},
+@Article{LISA2017,
+  author        = {{Amaro-Seoane}, P. and et al.},
+  title         = {{Laser Interferometer Space Antenna}},
+  journal       = {ArXiv e-prints},
+  year          = {2017},
+  month         = feb,
+  adsnote       = {Provided by the SAO/NASA Astrophysics Data System},
+  adsurl        = {http://adsabs.harvard.edu/abs/2017arXiv170200786A},
   archiveprefix = {arXiv},
-  eprint = {1702.00786},
-  keywords = {Astrophysics - Instrumentation and Methods for Astrophysics},
-  owner = {marsat},
-  primaryclass = {astro-ph.IM},
-  timestamp = {2017.03.17}
+  eprint        = {1702.00786},
+  keywords      = {Astrophysics - Instrumentation and Methods for Astrophysics},
+  owner         = {marsat},
+  primaryclass  = {astro-ph.IM},
+  timestamp     = {2017.03.17},
 }
 
 @ARTICLE{Apostolatos+94,
@@ -943,23 +943,6 @@
   primaryclass = {gr-qc}
 }
 
-@ARTICLE{Feroz+2009b,
-       author = {{Feroz}, F. and {Hobson}, M.~P. and {Bridges}, M.},
-        title = "{MULTINEST: an efficient and robust Bayesian inference tool for cosmology and particle physics}",
-      journal = {MNRAS},
-     keywords = {methods: data analysis, methods: statistical, Astrophysics},
-         year = "2009",
-        month = "Oct",
-       volume = {398},
-        pages = {1601-1614},
-          doi = {10.1111/j.1365-2966.2009.14548.x},
-archivePrefix = {arXiv},
-       eprint = {0809.3437},
- primaryClass = {astro-ph},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2009MNRAS.398.1601F},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
 @ARTICLE{Field+13,
   author = {{Field}, S.~E. and {Galley}, C.~R. and {Hesthaven}, J.~S. and {Kaye},
 	J. and {Tiglio}, M.},
@@ -1049,23 +1032,6 @@ archivePrefix = {arXiv},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System},
   adsurl = {http://adsabs.harvard.edu/abs/1967JMP.....8.2155G},
   doi = {10.1063/1.1705135}
-}
-
-@ARTICLE{Graff+2012,
-       author = {{Graff}, Philip and {Feroz}, Farhan and {Hobson}, Michael P. and
-         {Lasenby}, Anthony},
-        title = {{BAMBI: blind accelerated multimodal Bayesian inference}},
-      journal = {MNRAS},
-         year = {2012},
-        month = {Mar},
-       volume = {421},
-        pages = {169-180},
-          doi = {10.1111/j.1365-2966.2011.20288.x},
-archivePrefix = {arXiv},
-       eprint = {1110.2997},
- primaryClass = {astro-ph.IM},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2012MNRAS.421..169G},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @ARTICLE{Hannam+13,
@@ -1302,17 +1268,6 @@ archivePrefix = {arXiv},
   note = {\url{http://lisa.nasa.gov/documentation.html}},
   owner = {marsat},
   timestamp = {2013.05.27}
-}
-
-@PHDTHESIS{Littenberg2009,
-   author = {{Littenberg}, T.~B.},
-    title = "{A comprehensive Bayesian approach to gravitational wave astronomy}",
- keywords = {Bayesian inference, Gravitational waves, Relativity},
-   school = {Montana State University},
-     year = 2009,
-    month = June,
-   adsurl = {http://adsabs.harvard.edu/abs/2009PhDT.........3L},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @ARTICLE{London+17,
@@ -1849,21 +1804,6 @@ archivePrefix = {arXiv},
   primaryclass = {gr-qc}
 }
 
-@article{Swendsen+1986,
-  title = {Replica Monte Carlo Simulation of Spin-Glasses},
-  author = {Swendsen, Robert H. and Wang, Jian-Sheng},
-  journal = {Phys. Rev. Lett.},
-  volume = {57},
-  issue = {21},
-  pages = {2607--2609},
-  numpages = {0},
-  year = {1986},
-  month = {Nov},
-  publisher = {American Physical Society},
-  doi = {10.1103/PhysRevLett.57.2607},
-  url = {https://link.aps.org/doi/10.1103/PhysRevLett.57.2607}
-}
-
 @ARTICLE{Taracchini+13,
   author = {{Taracchini}, A. and {Buonanno}, A. and {Pan}, Y. and {Hinderer},
 	T. and {Boyle}, M. and {Hemberger}, D.~A. and {Kidder}, L.~E. and
@@ -2024,19 +1964,6 @@ archivePrefix = {arXiv},
   timestamp = {2016.10.25}
 }
 
-@article{Vrugt+2008,
-title = {Differential evolution Markov chain with snooker updater and fewer chains},
-author = {Vrugt, Jasper A and Ter Braak, Cajo J F},
-abstractNote = {Differential Evolution Markov Chain (DE-MC) is an adaptive MCMC algorithm, in which multiple chains are run in parallel. Standard DE-MC requires at least N=2d chains to be run in parallel, where d is the dimensionality of the posterior. This paper extends DE-MC with a snooker updater and shows by simulation and real examples that DE-MC can work for d up to 50--100 with fewer parallel chains (e.g. N=3) by exploiting information from their past by generating jumps from differences of pairs of past states. This approach extends the practical applicability of DE-MC and is shown to be about 5--26 times more efficient than the optimal Normal random walk Metropolis sampler for the 97.5% point of a variable from a 25--50 dimensional Student T{sub 3} distribution. In a nonlinear mixed effects model example the approach outperformed a block-updater geared to the specific features of the model.},
-doi = {},
-journal = {Statistics and Computing},
-number = 4,
-volume = 18,
-place = {United States},
-year = {2008},
-month = {1}
-}
-
 @ARTICLE{Wickham+06,
   author = {{Wickham}, E.~D.~L. and {Stroeer}, A. and {Vecchio}, A.},
   title = {{A Markov chain Monte Carlo approach to the study of massive black
@@ -2151,7 +2078,7 @@ month = {1}
 }
 
 @Article{Cotesta+18,
-  author        = {Cotesta, Roberto and Buonanno, Alessandra and Boh\'e, Alejandro and Taracchini, Andrea and Hinder, Ian and Ossokine, Serguei},
+  author        = {Cotesta, Roberto and Buonanno, Alessandra and Bohé, Alejandro and Taracchini, Andrea and Hinder, Ian and Ossokine, Serguei},
   title         = {{Enriching the Symphony of Gravitational Waves from Binary Black Holes by Tuning Higher Harmonics}},
   journal       = {Phys. Rev.},
   year          = {2018},
