Initial notes about intro

--- a/paper/paper_PE.tex
+++ b/paper/paper_PE.tex
@@ -112,7 +112,19 @@ The space-based gravitational wave detector LISA will observe mergers of superma
 %
 %Much remained to be explored for the data analysis of LISA. Different challenges : high SNR for merger-dominated SMBH signals, SNR-limited regime for very long SOBH signals. The motion of the detector leaves an imprint on the signal, while the response also has frequency-dependency at high frequencies where the long-wavelength approx is not valid anymore. Finally, many other challenges : calibration and understanding noise on the fly, non-stationarity of the noise, dealing with glitches, and most importantly global fit: superposition of long-lived sources in a single datastream.
 
+Gravitational waves are awesome.
 
+Literature review (can base on GOAT study).
+
+Main points:
+\begin{itemize}
+    \item Fast likelihood calculation of mergers, including ROM model with FD LISA response and techniques for fast overlaps.
+    \item Example cases of MBH near sweet spot and SOBH.
+    \item Compare Bayesian and Fisher.
+    \item Study effect of higher modes for MBH.
+    \item Evolution of information over time to merger.
+    \item Analytic intuitive explanation of complicated degeneracies.
+\end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
