--- a/paper/paper_PE.tex
+++ b/paper/paper_PE.tex
@@ -423,7 +423,7 @@ In these notations, we obtain
 	\sigma_{-} &= \rho e^{2i\varphi} \left[ e^{-2 i \psiL} + t_{\theta}^{4} t_{\iota}^{4} e^{2 i \psiL} \right] e^{2i \lambda_{a}} \,,
 \end{align}
 \esub
-with a common prefactor \jgb{This seems to need to  be multiplied by -6 to get what I have in my notes. Trace to change in def of $s_{a,e}$?}
+with a common prefactor \JGB{This seems to need to  be multiplied by -6 to get what I have in my notes. Trace to change in def of $s_{a,e}$?}
 \be\label{eq:sigmafactorrho}
 	\rho(d, \iota, \theta_{L}) = \frac{1}{4d} \sqrt{\frac{5}{\pi}} \frac{1}{\left( 1 + t_{\iota}^{2} \right)^{2} \left(1 + t_{\theta}^{2} \right)^{2}} \,.
 \ee
@@ -440,7 +440,7 @@ leaves the likelihood exactly invariant. There is also a symmetry based on excha
 	\lambda_{a}' = \lambda_{a} - \frac{1}{2} \Phi \quad \mathrm{mod} \; \pi\,.
 \end{align}
 
-\jgb{Don't have to resort to limits.}
+\JGB{Don't have to resort to limits.}
 \sout{We can now explain the degenerate features we found as certain limits in this simplified likelihood. In the face-on or face-off limit $\iota \rightarrow 0$, $|t_{\iota}| \ll 1$. This amounts to the $(\ell,m)=(2,2)$ contribution dominating the $(\ell, m)=(2,-2)$ contribution. Neglecting the terms in~\eqref{eq:sigmapm} that are quartic in $t_{\iota}$, we have}
 %\bsub\label{eq:sigmapmapprox}
 %\begin{align}
@@ -503,7 +503,7 @@ Similarly, considering inferred locations away from the LISA-constellation plane
 %	\lambda_{L}^{*} &= \frac{\pi}{6} -\frac{1}{4} \mathrm{Arg} \; r_{\rm inj} \;\mathrm{mod}\; \frac{\pi}{2} \,.
 %\end{align}
 %\esub
-\jgb{Keep something from this?}
+\JGB{Keep something from this?}
 The other condition~\eqref{eq:conditionprefactor} gives then a single phase constraint for $\varphi - \psiL$, and a single amplitude constraint for $\rho(d, \iota, \theta_{L}^{*})$. The limit $\iota \rightarrow \pi$ (where the $(2,-2)$ contribution dominates the $(2,2)$) is very similar, as can be seen most easily by the change of variable $\iota \rightarrow \pi - \iota$, with $-\psiL$ and $\pi - \theta_{L}$ playing the roles of $\psiL$ and $\theta_{L}$.
 
 
@@ -522,7 +522,7 @@ The other condition~\eqref{eq:conditionprefactor} gives then a single phase cons
 %\be
 %\rho e^{2i\varphi} e^{2i (\lambda_{a}^{*} - \psi_{L}^{*})} = \sigma_{-}^{\rm inj} \,.
 %\ee
-\jgb{Keep something from this?}
+\JGB{Keep something from this?}
 Thus, we find again a degenerate pattern, with the difference that \eqref{eq:soldegeniotaphi} imposes a condition on the pair $\lambda_{a} - \psiL$ instead of $\lambda_{a}$, and the extra condition imposes a condition on $\varphi$ instead of the pair $\varphi - \psiL$.
 
 When considering more harmonics beyond the dominant mode $h_{22}$, such degeneracies will be broken easily. As in the case of the full likelihood, the simplified likelihood~\eqref{eq:simplelikelihoodhm} will have several terms with different inclination and phase dependencies. If the signal is loud enough for at least two modes to be detected, then the inclination $\iota$ and the phase $\varphi$ are fixed by the relative amplitude and phase of these modes. This will break the degeneracies $(d, \iota)$ and the degeneracy $(\varphi, \psiL)$.
