More intro notes, remove outdated note

--- a/paper/paper_PE.tex
+++ b/paper/paper_PE.tex
@@ -114,9 +114,11 @@ The space-based gravitational wave detector LISA will observe mergers of superma
 
 Gravitational waves are awesome.
 
-Literature review (can base on GOAT study).
+LISA will be awesome.
 
-Main points:
+Literature review on BBH PE (can base on GOAT study).
+
+Main points of study:
 \begin{itemize}
     \item Fast likelihood calculation of mergers, including ROM model with FD LISA response and techniques for fast overlaps.
     \item Example cases of MBH near sweet spot and SOBH.
@@ -420,7 +422,6 @@ The functions~\eqref{eq:defsaelm} take the explicit form
 with the pattern functions for the channels $a$ and $e$ defined in \eqref{eq:defFapcFepc}-\eqref{eq:FapcFepc}.
 
 In order to make more manifest the degeneracies in the problem, it will be useful to introduce the following notations. First, since $\iota \in [0, \pi]$ while $\beta_{L} \in [-\pi/2, \pi/2]$, it will be more convenient to work with $\theta_{L} = \pi/2 - \beta_{L}$. We will further abbreviate notations by using the variables
-\TDC{it is unclear if these mean $\tan (\iota/2)$ or $(\tan \iota)/2$}
 \be
 	t_{\iota} \equiv \tan \frac{\iota}{2} \,, \quad t_{\theta} \equiv \tan \frac{\theta_{L}}{2} \,.
 \ee
