--- a/paper/references.bib
+++ b/paper/references.bib
@@ -2008,10 +2008,6 @@
   howpublished = {\url{http://www.gw-indigo.org/ligo-india}}
 }
 
-@MISC{KAGRA,
-  howpublished = {\url{http://gwcenter.icrr.u-tokyo.ac.jp/en/}}
-}
-
 @MISC{lal,
   title = {{LSC} Algorithm Library},
   note = {{\tt \url{http://www.lsc-group.phys.uwm.edu/lal}}}
@@ -2031,10 +2027,6 @@
   howpublished = {\url{http://www.black-holes.org/waveforms}},
   owner = {marsat},
   timestamp = {2018.05.22}
-}
-
-@MISC{Virgo,
-  howpublished = {\url{http://www.virgo.infn.it/}}
 }
 
 @article{Baird+2013,
@@ -2106,5 +2098,81 @@
   primaryclass  = {gr-qc},
   slaccitation  = {%%CITATION = ARXIV:1812.07865;%%},
 }
+
+@article{GWTC-1,
+      author         = "Abbott, B. P. and others",
+      title          = "{GWTC-1: A Gravitational-Wave Transient Catalog of
+                        Compact Binary Mergers Observed by LIGO and Virgo during
+                        the First and Second Observing Runs}",
+      collaboration  = "LIGO Scientific, Virgo",
+      year           = "2018",
+      eprint         = "1811.12907",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.HE",
+      reportNumber   = "LIGO-P1800307",
+      SLACcitation   = "%%CITATION = ARXIV:1811.12907;%%"
+}
+
+@article{LIGO,
+      author         = "Aasi, J. and others",
+      title          = "{Advanced LIGO}",
+      collaboration  = "LIGO Scientific",
+      journal        = "Class. Quant. Grav.",
+      volume         = "32",
+      year           = "2015",
+      pages          = "074001",
+      doi            = "10.1088/0264-9381/32/7/074001",
+      eprint         = "1411.4547",
+      archivePrefix  = "arXiv",
+      primaryClass   = "gr-qc",
+      SLACcitation   = "%%CITATION = ARXIV:1411.4547;%%"
+}
+
+@article{Virgo,
+      author         = "Acernese, F. and others",
+      title          = "{Advanced Virgo: a second-generation interferometric
+                        gravitational wave detector}",
+      collaboration  = "VIRGO",
+      journal        = "Class. Quant. Grav.",
+      volume         = "32",
+      year           = "2015",
+      number         = "2",
+      pages          = "024001",
+      doi            = "10.1088/0264-9381/32/2/024001",
+      eprint         = "1408.3978",
+      archivePrefix  = "arXiv",
+      primaryClass   = "gr-qc",
+      SLACcitation   = "%%CITATION = ARXIV:1408.3978;%%"
+}
+
+@article{KAGRA,
+  title = {Interferometer design of the KAGRA gravitational wave detector},
+  author = {Aso, Yoichi and Michimura, Yuta and Somiya, Kentaro and Ando, Masaki and Miyakawa, Osamu and Sekiguchi, Takanori and Tatsumi, Daisuke and Yamamoto, Hiroaki},
+  collaboration = {The KAGRA Collaboration},
+  journal = {Phys. Rev. D},
+  volume = {88},
+  issue = {4},
+  pages = {043007},
+  numpages = {15},
+  year = {2013},
+  month = {Aug},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.88.043007},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.88.043007}
+}
+
+@article{TAP-LISA,
+      author         = "Dal Canton, Tito and Mangiagli, Alberto and Noble, Scott
+                        C. and Schnittman, Jeremy and Ptak, Andy and Klein,
+                        Antoine and Sesana, Alberto and Camp, Jordan",
+      title          = "{Detectability of modulated X-rays from LISA's
+                        supermassive black hole mergers}",
+      year           = "2019",
+      eprint         = "1902.01538",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.HE",
+      SLACcitation   = "%%CITATION = ARXIV:1902.01538;%%"
+}
+
 
 @Comment{jabref-meta: databaseType:bibtex;}
