Work on the paper

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1035,7 +1035,7 @@
 }
 
 @ARTICLE{Hannam+13,
-  author = {Hannam, Mark and Schmidt, Patricia and Boh\'e, Alejandro and Haegel,
+  author = {Hannam, Mark and Schmidt, Patricia and Boh{\'e}, Alejandro and Haegel,
 	Leila and Husa, Sascha and Ohme, Frank and Pratten, Geraint and P\"urrer,
 	Michael},
   title = {{Simple Model of Complete Precessing Black-Hole-Binary Gravitational
@@ -1077,7 +1077,7 @@
 
 @ARTICLE{Husa+15,
   author = {Husa, Sascha and Khan, Sebastian and Hannam, Mark and P\"urrer, Michael
-	and Ohme, Frank and Jim\'enez Forteza, Xisco and Boh\'e, Alejandro},
+	and Ohme, Frank and Jim\'enez Forteza, Xisco and Boh{\'e}, Alejandro},
   title = {{Frequency-domain gravitational waves from nonprecessing black-hole
 	binaries. I. New numerical waveforms and anatomy of the signal}},
   journal = {Phys. Rev. D},
@@ -1126,7 +1126,7 @@
 
 @ARTICLE{Khan+15,
   author = {Khan, Sebastian and Husa, Sascha and Hannam, Mark and Ohme, Frank
-	and P\"urrer, Michael and Jim\'enez Forteza, Xisco and Boh\'e, Alejandro},
+	and P\"urrer, Michael and Jim\'enez Forteza, Xisco and Boh{\'e}, Alejandro},
   title = {{Frequency-domain gravitational waves from nonprecessing black-hole
 	binaries. II. A phenomenological model for the advanced detector
 	era}},
@@ -2070,7 +2070,7 @@
 }
 
 @Article{Cotesta+18,
-  author        = {Cotesta, Roberto and Buonanno, Alessandra and Bohé, Alejandro and Taracchini, Andrea and Hinder, Ian and Ossokine, Serguei},
+  author        = {Cotesta, Roberto and Buonanno, Alessandra and Boh{\'e}, Alejandro and Taracchini, Andrea and Hinder, Ian and Ossokine, Serguei},
   title         = {{Enriching the Symphony of Gravitational Waves from Binary Black Holes by Tuning Higher Harmonics}},
   journal       = {Phys. Rev.},
   year          = {2018},
