Add Makefile, update my affiliation & acks

--- a/paper/paper_PE.tex
+++ b/paper/paper_PE.tex
@@ -81,6 +81,7 @@
 \author{Tito Dal Canton}
 \thanks{NASA Postdoctoral Program fellow}
 \affiliation{Gravitational Astrophysics Laboratory, NASA Goddard Space Flight Center, 8800 Greenbelt Rd., Greenbelt, MD 20771, USA}
+\affiliation{Université Paris-Saclay, CNRS/IN2P3, IJCLab, 91405 Orsay, France}
 
 
 \date{\today}
@@ -1613,8 +1614,9 @@ These results also give us a hint to explain the results of Sec.~\ref{subsec:SMB
 
 \begin{acknowledgments}
 
-We would like to thank Stanislav Babak, Michael Katz, Vivien Raymond and Alexandre Toubiana for useful discussions. We are indebted to Philip Graff for his help with the \texttt{bambi} sampler. TDC was supported by an appointment to the NASA Postdoctoral Program at the Goddard Space Flight Center, administered by Universities Space Research
-Association under contract with NASA.
+We would like to thank Stanislav Babak, Michael Katz, Vivien Raymond and Alexandre Toubiana for useful discussions.
+We are indebted to Philip Graff for his help with the \texttt{bambi} sampler.
+TDC was supported by an appointment to the NASA Postdoctoral Program at the Goddard Space Flight Center, administered by Universities Space Research Association under contract with NASA, during part of this work.
 
 \end{acknowledgments}
 
