Update reference to GWTC-1

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1986,7 +1986,12 @@
                         Compact Binary Mergers Observed by LIGO and Virgo during
                         the First and Second Observing Runs}",
       collaboration  = "LIGO Scientific, Virgo",
-      year           = "2018",
+      journal        = "Phys. Rev.",
+      volume         = "X9",
+      year           = "2019",
+      number         = "3",
+      pages          = "031040",
+      doi            = "10.1103/PhysRevX.9.031040",
       eprint         = "1811.12907",
       archivePrefix  = "arXiv",
       primaryClass   = "astro-ph.HE",
